feat: add count to book
