# app/controller.go
@@ -37,7 +37,8 @@ func bindRoute(e *echo.Echo, c Controller, ba auth.BearerAuth) {
 	u := e.Group("/users")
 	m := e.Group("/memos")
 	b.GET("", c.Book.FetchAll, ba.ValidateBearerHeader)
-	b.GET("/:isbn", c.Book.FindBookByISBN, ba.ValidateBearerHeader)
+	b.GET("/:bookId", c.Book.FindBookAndAllMemosByBookID, ba.ValidateBearerHeader)
+	// b.GET("/:isbn", c.Book.FindBookByISBN, ba.ValidateBearerHeader)
 	b.GET("/search", c.Book.Search)
 	b.POST("", c.Book.CreateBook, ba.ValidateBearerHeader)
 	u.GET("/token", c.User.CreateUserAndToken)
