# app/entity/book.go
@@ -5,6 +5,7 @@ import "gorm.io/gorm"
 // Book book entity
 type Book struct {
 	gorm.Model
+	UserID      uint   `json:"userId"`
 	Title       string `gorm:"column:title" json:"title"`
 	Author      string `gorm:"column:author" json:"author"`
 	ShopLink    string `gorm:"column:shopLink" json:"shopLink"`
@@ -13,4 +14,6 @@ type Book struct {
 	Publisher   string `gorm:"column:publisher" json:"publisher"`
 	ISBN        string `gorm:"column:ISBN" json:"ISBN"`
 	Description string `gorm:"column:description" json:"description"`
+	IsReading   bool   `gorm:"column:is_reading;default:true" json:"isReading"`
+	Memos       []Memo `json:"memos"`
 }
