# app/entity/user.go
@@ -6,6 +6,6 @@ import "gorm.io/gorm"
 type User struct {
 	gorm.Model
 	Email string `gorm:"column:email" json:"email"`
-	Uid   string `gorm:"column:uid" json:"uid"`
-	Books []Book `gorm:"many2many:user_books;" json:"books"`
+	Uid   string `gorm:"column:uid" json:"token"`
+	Books []Book `json:"books"`
 }
